test/compile-fail/resolution/use/no-name-rename/expected.txt
error: unresolved item `b`
  ┌─ ./test/compile-fail/resolution/use/no-name-rename/top.rhdl:3:8
  │
3 │ use a::b as c;
  │        ^ no `b` item in `a`

